Fix vertical alignment

--- a/scrolltabs.scss
+++ b/scrolltabs.scss
@@ -19,9 +19,15 @@
     position: relative;
     width: 33px;
 
-    &.more::before {
-        content: '...';
-        padding: 10px;
+    &.more > .label {
+        // To make text vertically aligned with tab text
+        display: inline-block;
+        overflow: hidden;
+
+        &::before {
+            content: '...';
+            padding: 10px;
+        }
     }
 }
 
@@ -44,6 +50,25 @@
     @extend %tab;
     padding: 10px 0 10px 10px;
     position: relative;
+
+    .label {
+        display: inline-block;
+        overflow: hidden;
+        width: 100%;
+    }
+
+    .count {
+        border-radius: 7px;
+        color: white;
+        font-size: 11px;
+        position: absolute;
+        right: 5px;
+        top: -7px;
+        background: #999;
+        padding: 0 7px;
+        height: 14px;
+        text-align: center;
+    }
 
     &::before {
         content:'';
@@ -80,7 +105,7 @@
             padding: 10px;
         }
 
-        .countContainer {
+        .count-container {
             display: table-cell;
             padding: 10px;
             text-align: right;
@@ -90,24 +115,5 @@
             display: inline-block;
             position: static;
         }
-    }
-
-    .label {
-        display: inline-block;
-        overflow: hidden;
-        width: 100%;
-    }
-
-    .count {
-        border-radius: 7px;
-        color: white;
-        font-size: 11px;
-        position: absolute;
-        right: 5px;
-        top: -7px;
-        background: #999;
-        padding: 0 7px;
-        height: 14px;
-        text-align: center;
     }
 }
